[build-system]
requires = ["setuptools>=50.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
setup-requires = ["setuptools_scm"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
root = "calculator-quantlib"
relative_to = __file__
write_to = "CalculatorQuantApp/__init__.py"


[tool.setuptools.metadata]
name = "Calculator Quant App"
description = "Calculator Quant code"
author = "sughanrichardson1996@gmail.com"
license = "MIT"
