[build-system]
requires = ["setuptools>=50.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
setup-requires = ["setuptools_scm"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
root = "."
write_to = "CalculatorQuantApp/__init__.py"

[tool.setuptools.metadata]
name = "CalculatorQuantApp"
description = "Calculator Quant code"
author = "sughanrichardson1996@gmail.com"
license = "MIT"
